Evolver: Themes: Add more classic boot animation styles [3/3]

--- a/res/values/evolution_arrays.xml
+++ b/res/values/evolution_arrays.xml
@@ -54,13 +54,16 @@
    <string-array name="themes_boot_animation_entries">
         <item>Evolution X</item>
         <item>Evolution X (Reveal)</item>
-        <item>Evolution X (Anniv)</item>
+        <item>AOKP</item>
         <item>CyanogenMod</item>
         <item>ctOS</item>
         <item>Cyberpunk</item>
+        <item>Dirty Unicorns</item>
         <item>Google</item>
         <item>Google (Monet)</item>
+        <item>PAC-ROM</item>
         <item>Resurrection Remix</item>
+        <item>SlimRoms</item>
         <item>Valorant</item>
         <item>Custom</item>
     </string-array>
@@ -77,6 +80,9 @@
         <item>8</item>
         <item>9</item>
         <item>10</item>
+        <item>11</item> 
+        <item>12</item>
+        <item>13</item>
     </string-array>
 
     <!-- Themes - Screen off animation -->
