Evolver: Bootanimation styles: Show a toast message when bootanimation is moved to data/misc/bootanim

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -59,6 +59,7 @@
     <string name="themes_animations_category">Animations</string>
     <string name="themes_boot_animation_title">Boot animation</string>
     <string name="themes_boot_animation_summary">Set boot animation style</string>
+    <string name="themes_boot_animation_applied">Boot animation applied</string>
     <string name="themes_screen_off_animation_title">Screen off animation</string>
     <string name="themes_screen_off_animation_default">Default</string>
     <string name="themes_screen_off_animation_crt">CRT</string>
