--- a/res/xml/evolution_settings_gestures.xml
+++ b/res/xml/evolution_settings_gestures.xml
@@ -44,8 +44,8 @@
             android:title="@string/gestures_shake_gestures_action_title"
             android:summary="%s"
             android:dialogTitle="@string/gestures_shake_gestures_action_title"
-            android:entries="@array/shake_gestures_action_entries"
-            android:entryValues="@array/shake_gestures_action_values"
+            android:entries="@array/hardware_keys_action_entries"
+            android:entryValues="@array/hardware_keys_action_values"
             android:defaultValue="0"
             android:dependency="shake_gestures_enabled" />
 
@@ -64,14 +64,14 @@
         android:key="three_finger_gestures"
         android:title="@string/gestures_three_finger_gestures_title">
 
-        <!-- Three-fingers-swipe gestures -->
+        <!-- Three fingers swipe action -->
         <org.evolution.settings.preferences.SystemSettingListPreference
-            android:key="three_finger_gesture_action"
+            android:key="three_fingers_swipe"
             android:title="@string/gestures_three_finger_gesture_action_title"
             android:summary="%s"
             android:dialogTitle="@string/gestures_three_finger_gesture_action_dialog_title"
-            android:entries="@array/shake_gestures_action_entries"
-            android:entryValues="@array/shake_gestures_action_values"
+            android:entries="@array/hardware_keys_action_entries"
+            android:entryValues="@array/hardware_keys_action_values"
             android:defaultValue="0" />
 
         <!-- Three-fingers long press gestures -->
@@ -80,8 +80,8 @@
             android:title="@string/gestures_three_finger_long_press_action_title"
             android:summary="%s"
             android:dialogTitle="@string/gestures_three_finger_long_press_action_dialog_title"
-            android:entries="@array/shake_gestures_action_entries"
-            android:entryValues="@array/shake_gestures_action_values"
+            android:entries="@array/hardware_keys_action_entries"
+            android:entryValues="@array/hardware_keys_action_values"
             android:defaultValue="0" />
     </PreferenceCategory>
 </PreferenceScreen>
