--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -441,29 +441,33 @@
     <string name="notifications_less_boring_heads_up_summary">Display popup notifications only for alarm, dialer and messaging app</string>
 
     <!-- Gestures/Three Finger Gestures -->
-    <string name="gestures_three_finger_gestures_title">Three finger gestures</string>
-    <string name="gestures_three_finger_gesture_action_title">Three finger swipe gestures</string>
-    <string name="gestures_three_finger_gesture_action_dialog_title">Swipe three finger gestures actions</string>
-    <string name="gestures_three_finger_long_press_action_title">Three finger long press gestures</string>
-    <string name="gestures_three_finger_long_press_action_dialog_title">Three finger long press gestures actions</string>
+    <string name="gestures_three_fingers_swipe_title">Three fingers swipe</string>
+    <string name="gestures_three_fingers_long_press_title">Three finger long press action</string>
 
-    <!-- Gestures/Shake Gestures -->
+    <!-- Gestures -->
     <string name="hardware_keys_action_nothing">No action</string>
-    <string name="hardware_keys_action_close_app">Kill foreground app</string>
+    <string name="hardware_keys_action_menu">Open/close menu</string>
+    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
     <string name="hardware_keys_action_search">Search assistant</string>
     <string name="hardware_keys_action_voice_search">Voice search</string>
+    <string name="hardware_keys_action_in_app_search">In-app search</string>
+    <string name="hardware_keys_action_launch_camera">Launch camera</string>
+    <string name="hardware_keys_action_sleep">Turn screen off</string>
+    <string name="hardware_keys_action_last_app">Last app</string>
+    <string name="hardware_keys_action_split_screen">Split screen</string>
+    <string name="hardware_keys_action_close_app">Kill app</string>
+    <string name="hardware_keys_action_torch">Toggle torch</string>
+    <string name="hardware_keys_action_screenshot">Take screenshot</string>
+    <string name="hardware_keys_action_volume_panel">Toggle volume panel</string>
+    <string name="hardware_keys_action_clear_all_notifications">Clear all notifications</string>
+    <string name="hardware_keys_action_notifications_panel">Toggle notifications panel</string>
+    <string name="hardware_keys_action_expand_qs_panel">Expand QS panel</string>
+    <string name="hardware_keys_action_ringer_modes">Change ringer mode</string>
     <string name="gestures_shake_gestures_enabled_title">Shake gestures</string>
     <string name="gestures_shake_gestures_enabled_summary">Shake your device to perform actions</string>
     <string name="gestures_shake_gestures_action_title">Shake gestures actions</string>
     <string name="gestures_shake_gestures_intensity_title">Shake gestures intensity</string>
     <string name="gestures_shake_gestures_intensity_summary">Adjust the sensitivity of shake gestures</string>
-    <string name="shake_gestures_toggle_flashlight">Toggle Flashlight</string>
-    <string name="shake_gestures_media_playback">Play/Skip Media</string>
-    <string name="shake_gestures_volume_panel">Show Volume Panel</string>
-    <string name="shake_gestures_screen_wake">Turn Screen Off</string>
-    <string name="shake_gestures_clear_notifs">Clear All Notifications</string>
-    <string name="shake_gestures_toggle_ringer">Toggle Ringer Mode</string>
-    <string name="shake_gestures_screenshot">Take Screenshot</string>
 
     <!-- Power menu -->
     <string name="power_menu_interface_category">Interface</string>
