--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -426,9 +426,16 @@
 
     <!-- Gestures/Shake Gestures -->
     <string name="hardware_keys_action_nothing">No action</string>
-    <string name="hardware_keys_action_close_app">Kill foreground app</string>
+    <string name="hardware_keys_action_menu">Open/close menu</string>
+    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
     <string name="hardware_keys_action_search">Search assistant</string>
     <string name="hardware_keys_action_voice_search">Voice search</string>
+    <string name="hardware_keys_action_in_app_search">In-app search</string>
+    <string name="hardware_keys_action_launch_camera">Launch camera</string>
+    <string name="hardware_keys_action_sleep">Turn screen off</string>
+    <string name="hardware_keys_action_last_app">Last app</string>
+    <string name="hardware_keys_action_split_screen">Split screen</string>
+    <string name="hardware_keys_action_close_app">Kill foreground app</string>
     <string name="gestures_shake_gestures_enabled_title">Shake gestures</string>
     <string name="gestures_shake_gestures_enabled_summary">Shake your device to perform actions</string>
     <string name="gestures_shake_gestures_action_title">Shake gestures actions</string>
