Evolver: Update network traffic settings to use main switch
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -569,4 +569,8 @@
     <string name="systemui_restart_message">For changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
     <string name="systemui_restart_yes">Yes</string>
     <string name="systemui_restart_not_now">Not now</string>
+
+    <!-- General -->
+    <string name="enable">Enable</string>
+    <string name="disable">Disable</string>
 </resources>
