--- a/res/xml/evolution_settings_quick_settings.xml
+++ b/res/xml/evolution_settings_quick_settings.xml
@@ -167,11 +167,11 @@
         android:key="quick_settings_miscellaneous_category"
         android:title="@string/quick_settings_miscellaneous_category">
 
-        <!-- Bluetooth auto on -->
+        <!-- QS Bluetooth Dialog -->
         <org.evolution.settings.preferences.SystemSettingSwitchPreference
-            android:key="qs_bt_auto_on"
-            android:title="@string/quick_settings_bluetooth_auto_on_title"
-            android:summary="@string/quick_settings_bluetooth_auto_on_summary"
-            android:defaultValue="false" />
+            android:key="qs_bt_show_dialog"
+            android:title="@string/quick_settings_bluetooth_show_dialog_title"
+            android:summary="@string/quick_settings_bluetooth_show_dialog_summary"
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
