Evolver: Add ability to hide carrier name on lockscreen [2/2]
[someone5678]
* Rewrite strings and make default to true

Original commit:
blackshibe/android_packages_apps_crDroidSettings@8dff772

Change-Id: Iba986f307e133cd118c9b35b61fcf73481343817
Signed-off-by: someone5678 <59456192+someone5678@users.noreply.github.com>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -260,6 +260,8 @@
     <string name="status_bar_miscellaneous_category">Miscellaneous</string>
     <string name="status_bar_battery_bar_title">Battery bar</string>
     <string name="status_bar_battery_bar_summary">Display and customize battery bar above status bar</string>
+    <string name="status_bar_carrier_lock_screen_title">Carrier name on lockscreen</string>
+    <string name="status_bar_carrier_lock_screen_summary">Display carrier name on lockscreen status bar</string>
 
     <!-- Status bar/Clock & date-->
     <string name="status_bar_clock_position_title">Clock position</string>
