--- a/res/values/evolution_attrs.xml
+++ b/res/values/evolution_attrs.xml
@@ -22,4 +22,10 @@
         <attr name="units" format="string|reference" />
         <attr name="continuousUpdates" format="boolean" />
     </declare-styleable>
+
+    <!-- Base attributes available to OverlaySwitchPreference. -->
+    <declare-styleable name="OverlaySwitchPreference">
+        <attr name="dkey" format="string" />
+        <attr name="dkeyNightOnly" format="boolean" />
+    </declare-styleable>
 </resources>
